--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,10 @@ section {
     background-position: center;
 }
 
-
+.coldplay {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
 
 
