--- a/style.css
+++ b/style.css
@@ -292,7 +292,7 @@ footer p:nth-child(2){
 }
 .end{
     position: absolute;
-    color:#f9004d;
+    color:#f900fd;
     bottom: 35px;
     font-size: 14px;
 }
