--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     font-family: 'Josefin Sans', sans-serif;
     box-sizing: border-box;
+    background-color: #191919;
 }
 
 nav{
@@ -20,7 +21,7 @@ nav{
     cursor: pointer;
 }
 span{
-    color: #f9004d;
+    color: #f90000;
 }
 nav ul li{
     list-style-type: none;
@@ -34,11 +35,11 @@ nav ul li a{
     text-transform: capitalize;
 }
 nav ul li a:hover{
-    color: #f9004d;
+    color: #f90000;
     transition: .4s;
 }
 .btn{
-    background-color:#f9004d;
+    background-color:#f90000;
     color: white;
     text-decoration: none;
     border: 2px solid transparent;
@@ -80,7 +81,7 @@ h4{
     display: inline-block;
     width: 100%;
     padding: 14px 130px 14px 15px;
-    border: 2px solid #f9004d;
+    border: 2px solid #f90000;
     outline: none;
     border-radius: 30px;
 }
@@ -91,7 +92,7 @@ h4{
     border: none;
     padding: 10px 30px;
     border-radius: 30px;
-    background-color:#f9004d;
+    background-color:#f90000;
     color: white;
     box-shadow: 0px 0px 5px #000, 0px 0px 15px #858585;
     top: 6px;
@@ -139,7 +140,7 @@ h4{
     margin-bottom: 45px;
 }
 button{
-    background-color:#f9004d;
+    background-color:#f90000;
     color: white;
     text-decoration: none;
     border: 2px solid transparent;
@@ -150,7 +151,7 @@ button{
 }
 button:hover{
     background-color: transparent;
-    border: 2px solid #f9004d;
+    border: 2px solid #f90000;
     cursor: pointer;
 }
 
@@ -188,7 +189,7 @@ button:hover{
     display: block;
     text-align: center;
     margin: 25px 0px;
-    color: #f9004d;
+    color: #f90000;
 
 }
 h5{
@@ -203,7 +204,7 @@ h5{
     margin-bottom: 25px;
 }
 .card .button{
-    background-color:#f9004d;
+    background-color:#f90000;
     color: white;
     text-decoration: none;
     border: 2px solid transparent;
@@ -214,7 +215,7 @@ h5{
 }
 .card .button:hover{
     background-color: transparent;
-    border: 2px solid #f9004d;
+    border: 2px solid #f90000;
     cursor: pointer;
 }
 .contact-me{
@@ -233,7 +234,7 @@ h5{
     margin-bottom: 25px;
 }
 .contact-me .button-two{
-    background-color:#f9004d;
+    background-color:#f90000;
     color: white;
     text-decoration: none;
     border: 2px solid transparent;
@@ -244,7 +245,7 @@ h5{
 }
 .contact-me .button-two:hover{
     background-color: transparent;
-    border: 2px solid #f9004d;
+    border: 2px solid #f90000;
     cursor: pointer;
 }
 footer{
@@ -279,7 +280,7 @@ footer p:nth-child(2){
     display: flex;
     align-items: center;
     justify-content: center;
-    background:  #f9004d;
+    background:  #f90000;
     border-radius: 50%;
     margin: 22px 10px;
     color: white;
@@ -292,7 +293,7 @@ footer p:nth-child(2){
 }
 .end{
     position: absolute;
-    color:#f900fd;
+    color:#f90000;
     bottom: 35px;
     font-size: 14px;
 }
