--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,14 @@
     margin: 0;
     font-family: 'Josefin Sans', sans-serif;
     box-sizing: border-box;
-    background-color: #191919;
 }
-
+.hero{
+    height: 100vh;
+    width: 100%;
+    background-image: url(../img/background.jpg);
+    background-size: cover;
+    background-position: center;
+}
 nav{
     display: flex;
     align-items: center;
@@ -68,7 +73,7 @@ h3{
     margin-bottom: 50px;
 }
 h4{
-    color: #fcfc;
+    color: rgb(255, 113, 113);
     letter-spacing: 2px;
     font-size: 20px;
 }
@@ -293,7 +298,7 @@ footer p:nth-child(2){
 }
 .end{
     position: absolute;
-    color:#f90000;
+    color:#f9004d;
     bottom: 35px;
     font-size: 14px;
 }
