--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ h4{
     text-transform: capitalize;
 }
 .about-text p{
-    color: #fcfc;
+    color:  rgb(255, 113, 113);
     letter-spacing: 1px;
     line-height: 28px;
     font-size: 18px;
@@ -209,7 +209,7 @@ h5{
     margin-bottom: 15px;
 }
 .pra p{
-    color: #fcfc;
+    color:  rgb(255, 113, 113);
     font-size: 16px;
     line-height: 27px;
     margin-bottom: 25px;
