--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,25 @@ h4{
     right: 6px;
 }
 
+.solution{
+    position: absolute;
+    display: inline-block;
+    outline: none;
+    border: none;
+    padding: 10px 30px;
+    border-radius: 30px;
+    background-color:#f90000;
+    box-shadow: 0px 0px 5px #000, 0px 0px 15px #858585;
+    top: 6px;
+    right: 6px;
+    text-decoration: none;
+    text: white;
+}
+
+a {
+    color: #ffffff;
+}
+
 .about{
     width: 100%;
     padding: 100px 0px;
