--- a/css/login.css
+++ b/css/login.css
@@ -10,14 +10,17 @@ input {
 
 /* Style the submit button */
 input[type=submit] {
-    background-color: #04AA6D;
+    background-color: red;
     color: white;
 }
 
 /* Style the container for inputs */
-.container {
+.containeri {
     background-color: #f1f1f1;
-    padding: 20px;
+    padding-left: 20px;
+    padding-top: 20px;
+    height: 360px;
+    width: 60%;
 }
 
 /* The message box is shown when the user clicks on the password field */
