--- a/css/login.css
+++ b/css/login.css
@@ -1,3 +1,41 @@
+
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 45px;
+    padding-left: 8%;
+    padding-right: 8%;
+
+span{
+    color: #f90000;
+}
+nav ul li{
+    list-style-type: none;
+    display: inline-block;
+    padding: 10px  25px;
+}
+nav ul li a{
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    text-transform: capitalize;
+}
+nav ul li a:hover{
+    color: #f90000;
+    transition: .4s;
+}
+.btn{
+    background-color:#f90000;
+    color: white;
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 10px 25px;
+    border-radius: 30px;
+    transition: transform .4s;
+}
+
 input {
     width: 100%;
     padding: 12px;
@@ -16,8 +54,7 @@ input[type=submit] {
 
 /* Style the container for inputs */
 .containeri {
-    background-color: #f1f1f1;
-    padding-left: 20px;
+    padding-left: 320px;
     padding-top: 20px;
     height: 360px;
     width: 60%;
@@ -63,4 +100,5 @@ input[type=submit] {
 .login {
     align-content: center;
     width: 70%;
+    background-color: white;
 }
