--- a/login2.css
+++ b/login2.css
@@ -18,7 +18,7 @@ body {
     align-items: center;
     justify-content: center;
     font-size: 18px;
-    background: url(./background.jpg);
+    background: url(./img/background.jpg);
     background-size: cover;
 }
 
@@ -192,3 +192,4 @@ body {
     left: -35px;
     content: "&#10006;";
 }
+
