--- a/login2.css
+++ b/login2.css
@@ -1,195 +1,33 @@
 *{
     background-color: #191919;
+    padding: 0;
+    margin: 0;
+    font-family: 'Josefin Sans', sans-serif;
+    box-sizing: border-box;
 }
 div {
     background-color: white;
 }
-body {
-    --color-primary: #ff0000;
-    --color-primary-dark: #ff0000;
-    --color-secondary: #212121;
-    --color-error: #ff0000;
-    --color-success: #ff0000;
-    --border-radius: 4px;
 
-    margin: 0;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 18px;
-    background: url(./img/background.jpg);
-    background-size: cover;
-}
-
-.btn{
-    background-color:#f90000;
-    color: white;
-    text-decoration: none;
-    border: 2px solid transparent;
-    font-weight: bold;
-    padding: 10px 55px;
-    border-radius: 30px;
-    transition: transform .3s;
-    display: flex;
-    justify-content: center;
-}
-.btn:hover{
-    transform: scale(1.2);
-}
 .container {
     width: 400px;
     max-width: 400px;
     margin: 1rem;
     padding: 2rem;
     box-shadow: 0 0 40px rgba(255, 255, 255, 0.2);
-    border-radius: var(--border-radius);
     background-color: #ffffff;
+
 }
 
-.container,
-.form__input,
-.form__button {
-    font: 500 1rem 'Quicksand', sans-serif;
-    text-decoration: none;
+#submit {
+    font-size: 25px;
+    background-color: red;
+color:white;
+    border-radius: 210px;
+    width: 150px;
+    height: 50px;
 }
 
-.form--hidden {
-    display: none;
-}
-
-.form > *:first-child {
-    margin-top: 0;
-}
-
-.form > *:last-child {
-    margin-bottom: 0;
-}
-
-.form__title {
-    margin-bottom: 2rem;
-    text-align: center;
+form {
     background-color: white;
 }
-
-.form__message {
-    text-align: center;
-    margin-bottom: 1rem;
-}
-
-.form__message--success {
-    color: var(--color-success);
-}
-
-.form__message--error {
-    color: var(--color-error);
-}
-
-.form__input-group {
-    margin-bottom: 1rem;
-}
-
-.form__input {
-    display: block;
-    width: 100%;
-    padding: 0.75rem;
-    box-sizing: border-box;
-    border-radius: var(--border-radius);
-    border: 1px solid #dddddd;
-    outline: none;
-    background: #eeeeee;
-    transition: background 0.2s, border-color 0.2s;
-}
-
-.form__input:focus {
-    border-color: var(--color-primary);
-    background: #ffffff;
-}
-
-.form__input--error {
-    color: var(--color-error);
-    border-color: var(--color-error);
-}
-
-.form__input-error-message {
-    margin-top: 0.5rem;
-    font-size: 0.85rem;
-    color: var(--color-error);
-}
-
-.form__button {
-    width: 100%;
-    padding: 1rem 10.2rem;
-    font-weight: bold;
-    font-size: 1.1rem;
-    color: #ffffff;
-    border: none;
-    border-radius: var(--border-radius);
-    outline: none;
-    cursor: pointer;
-    background: var(--color-primary);
-}
-
-.form__button:hover {
-    background: var(--color-primary-dark);
-}
-
-.form__button:active {
-    transform: scale(0.98);
-}
-
-.form__text {
-    text-align: center;
-}
-
-.form__link {
-    color: var(--color-secondary);
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.form__link:hover {
-    text-decoration: underline;
-}
-
-#login.form {
-    background-color: white;
-}
-
-/* The message box is shown when the user clicks on the password field */
-#message {
-    display:none;
-    background: #f1f1f1;
-    color: #000;
-    position: relative;
-    padding: 20px;
-    margin-top: 10px;
-}
-
-#message p {
-    padding: 10px 35px;
-    font-size: 18px;
-}
-
-/* Add a green text color and a checkmark when the requirements are right */
-.valid {
-    color: green;
-}
-
-.valid:before {
-    position: relative;
-    left: -35px;
-    content: "&#10004;";
-}
-
-/* Add a red text color and an "x" icon when the requirements are wrong */
-.invalid {
-    color: red;
-}
-
-.invalid:before {
-    position: relative;
-    left: -35px;
-    content: "&#10006;";
-}
-
