--- a/css/login2.css
+++ b/css/login2.css
@@ -72,3 +72,12 @@ p {
     margin-top: 15px;
     padding-bottom: 4px;
 }
+
+#goBack{
+    font-size: 25px;
+    background-color: red;
+    color:white;
+    border-radius: 5px;
+    width: 460px;
+    height: 50px;
+}
